docs/ufl/1.1.0/source/ufl.algorithms.rst

.. _ufl_algorithms_package:

algorithms Package
==================

:mod:`algorithms` Package
-------------------------

.. automodule:: ufl.algorithms
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`ad` Module
----------------

.. automodule:: ufl.algorithms.ad
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`analysis` Module
----------------------

.. automodule:: ufl.algorithms.analysis
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`argument_dependencies` Module
-----------------------------------

.. automodule:: ufl.algorithms.argument_dependencies
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`checks` Module
--------------------

.. automodule:: ufl.algorithms.checks
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`deprecated` Module
------------------------

.. automodule:: ufl.algorithms.deprecated
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`elementtransformations` Module
------------------------------------

.. automodule:: ufl.algorithms.elementtransformations
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`estimate_degrees` Module
------------------------------

.. automodule:: ufl.algorithms.estimate_degrees
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`expand_compounds` Module
------------------------------

.. automodule:: ufl.algorithms.expand_compounds
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`expand_indices` Module
----------------------------

.. automodule:: ufl.algorithms.expand_indices
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`formdata` Module
----------------------

.. automodule:: ufl.algorithms.formdata
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`formfiles` Module
-----------------------

.. automodule:: ufl.algorithms.formfiles
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`formtransformations` Module
---------------------------------

.. automodule:: ufl.algorithms.formtransformations
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`forward_ad` Module
------------------------

.. automodule:: ufl.algorithms.forward_ad
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`graph` Module
-------------------

.. automodule:: ufl.algorithms.graph
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`latextools` Module
------------------------

.. automodule:: ufl.algorithms.latextools
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`multifunction` Module
---------------------------

.. automodule:: ufl.algorithms.multifunction
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`pdiffs` Module
--------------------

.. automodule:: ufl.algorithms.pdiffs
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`predicates` Module
------------------------

.. automodule:: ufl.algorithms.predicates
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`preprocess` Module
------------------------

.. automodule:: ufl.algorithms.preprocess
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`printing` Module
----------------------

.. automodule:: ufl.algorithms.printing
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`propagate_restrictions` Module
------------------------------------

.. automodule:: ufl.algorithms.propagate_restrictions
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`renumbering` Module
-------------------------

.. automodule:: ufl.algorithms.renumbering
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`replace` Module
---------------------

.. automodule:: ufl.algorithms.replace
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`reverse_ad` Module
------------------------

.. automodule:: ufl.algorithms.reverse_ad
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`signature` Module
-----------------------

.. automodule:: ufl.algorithms.signature
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`transformations` Module
-----------------------------

.. automodule:: ufl.algorithms.transformations
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`transformer` Module
-------------------------

.. automodule:: ufl.algorithms.transformer
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`traversal` Module
-----------------------

.. automodule:: ufl.algorithms.traversal
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`tuplenotation` Module
---------------------------

.. automodule:: ufl.algorithms.tuplenotation
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`ufl2dot` Module
---------------------

.. automodule:: ufl.algorithms.ufl2dot
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`ufl2latex` Module
-----------------------

.. automodule:: ufl.algorithms.ufl2latex
    :members:
    :undoc-members:
    :show-inheritance:

